Update HTML File

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bootstrap Template AXIT</title>
-  <link rel="stylesheet" href="css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="css/all.min.css"/>
-  <link rel="stylesheet" href="css/main.css"/>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" />
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/all.min.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com" >
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" >
 </head>
 <body>
   <nav class="navbar navbar-expand-lg bg-dark sticky-top" data-bs-theme="dark">
@@ -63,10 +63,10 @@
             <h3 class="text-center fs-5 text-black pt-3 pb-3 mb-5">
               Try Your <span>Free</span> Trial Today
             </h3>
-            <input class="form-control border-0 border-bottom border-1 rounded-0 shadow-none bg-transparent w-75 m-auto mb-5" type="text" name="username" placeholder="Name"/>
-            <input class="form-control border-0 border-bottom border-1 rounded-0 shadow-none bg-transparent w-75 m-auto mb-5" type="email" name="email" placeholder="Email"/>
-            <input class="form-control border-0 border-bottom border-1 rounded-0 shadow-none bg-transparent w-75 m-auto mb-5" type="password" name="password" placeholder="Password"/>
-            <input type="submit" value="Get Started" class="btn p-3 w-100 text-light rounded-0 fw-medium"/>
+            <input class="form-control border-0 border-bottom border-1 rounded-0 shadow-none bg-transparent w-75 m-auto mb-5" type="text" name="username" placeholder="Name">
+            <input class="form-control border-0 border-bottom border-1 rounded-0 shadow-none bg-transparent w-75 m-auto mb-5" type="email" name="email" placeholder="Email">
+            <input class="form-control border-0 border-bottom border-1 rounded-0 shadow-none bg-transparent w-75 m-auto mb-5" type="password" name="password" placeholder="Password">
+            <input type="submit" value="Get Started" class="btn p-3 w-100 text-light rounded-0 fw-medium">
           </form>
         </div>
       </div>
@@ -101,13 +101,13 @@
         <div class="col-lg-8 text-center text-lg-start">
           <div class="info d-flex flex-column flex-lg-row gap-5">
             <ul class="tabs list-unstyled m-0">
-              <li class="active d-flex justify-content-center align-items-center text-uppercase text-light fw-bold" data-tab="one" role="button">
+              <li class="active d-flex justify-content-center align-items-center text-uppercase text-light fw-bold" data-tab="one">
                 Tab 1
               </li>
-              <li class="d-flex justify-content-center align-items-center text-uppercase text-light fw-bold" data-tab="two" role="button">
+              <li class="d-flex justify-content-center align-items-center text-uppercase text-light fw-bold" data-tab="two">
                 Tab 2
               </li>
-              <li class="d-flex justify-content-center align-items-center text-uppercase text-light fw-bold" data-tab="three" role="button">
+              <li class="d-flex justify-content-center align-items-center text-uppercase text-light fw-bold" data-tab="three">
                 Tab 3
               </li>
             </ul>
@@ -153,7 +153,7 @@
           </div>
         </div>
         <div class="col-lg-4 text-center d-none d-lg-block">
-          <img class="img-fluid" src="images/home.png" alt="Home">
+          <img class="img-fluid" src="images/home.webp" width="320" height="253" alt="Home">
         </div>
       </div>
     </div>
@@ -162,7 +162,7 @@
     <div class="container pt-5 pb-5">
       <div class="row align-items-center">
         <div class="col-lg-6 text-center d-none d-lg-block">
-          <img class="img-fluid" src="images/sublist.png" alt="Sublist"/>
+          <img class="img-fluid" src="images/sublist.webp" loading="lazy" width="525" height="375" alt="Sublist">
         </div>
         <div class="col-lg-6 text-center text-lg-start">
           <div class="info">
@@ -211,7 +211,7 @@
           </div>
         </div>
         <div class="col-lg-6 text-center">
-          <img class="img-fluid" src="images/standard.png" alt="Standard"/>
+          <img class="img-fluid" src="images/standard.webp" width="525" height="375" alt="Standard">
         </div>
       </div>
     </div>
@@ -347,7 +347,7 @@
           </p>
           <div class="d-flex align-items-center pt-2">
             <div class="flex-shrink-0">
-              <img class="img-thumbnail rounded-circle" src="images/avatar.png" alt="Jeremey">
+              <img class="img-thumbnail rounded-circle" src="images/avatar.webp" loading="lazy" width="70" height="70" alt="Jeremey">
             </div>
             <div class="flex-grow-1 ms-3">
               <h5 class="mb-1 fw-bold">Jeremy H.</h5>
@@ -361,7 +361,7 @@
           </p>
           <div class="d-flex align-items-center pt-2">
             <div class="flex-shrink-0">
-              <img class="img-thumbnail rounded-circle" src="images/avatar.png" alt="John">
+              <img class="img-thumbnail rounded-circle" src="images/avatar.webp" loading="lazy" width="70" height="70" alt="John">
             </div>
             <div class="flex-grow-1 ms-3">
               <h5 class="mb-1 fw-bold">John S.</h5>
@@ -375,7 +375,7 @@
           </p>
           <div class="d-flex align-items-center pt-2">
             <div class="flex-shrink-0">
-              <img class="img-thumbnail rounded-circle" src="images/avatar.png" alt="Susan">
+              <img class="img-thumbnail rounded-circle" src="images/avatar.webp" loading="lazy" width="70" height="70" alt="Susan">
             </div>
             <div class="flex-grow-1 ms-3">
               <h5 class="mb-1 fw-bold">Susan W.</h5>
@@ -412,13 +412,13 @@
       <form class="row">
         <div class="col-lg-6">
           <div class="mb-4">
-            <input type="text" class="form-control form-control-lg shadow-none border-0 border-bottom rounded-0 bg-transparent" id="username" placeholder="Name"/>
+            <input type="text" class="form-control form-control-lg shadow-none border-0 border-bottom rounded-0 bg-transparent" id="username" placeholder="Name">
           </div>
           <div class="mb-4">
-            <input type="email" class="form-control form-control-lg shadow-none border-0 border-bottom rounded-0 bg-transparent" id="email" placeholder="Email"/>
+            <input type="email" class="form-control form-control-lg shadow-none border-0 border-bottom rounded-0 bg-transparent" id="email" placeholder="Email">
           </div>
           <div class="mb-4">
-            <input type="text" class="form-control form-control-lg shadow-none border-0 border-bottom rounded-0 bg-transparent" id="subject" placeholder="Subject"/>
+            <input type="text" class="form-control form-control-lg shadow-none border-0 border-bottom rounded-0 bg-transparent" id="subject" placeholder="Subject">
           </div>
         </div>
         <div class="col-lg-6">
